[project]
name = "crawl4ai-mcp"
version = "0.1.2" # Incremented version again
description = "MCP server for integrating web crawling and RAG into AI agents and AI coding assistants using Gemini Experimental Embeddings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai==0.6.2",
    "mcp==1.7.1",
    "supabase==2.15.1",
    "google-genai==0.7.2", # Updated to the recommended library
    "python-dotenv==1.0.1"
]